<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editText_BillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:ems="10"
        android:hint="Enter Amount"
        android:inputType="number"
        android:maxLength="6"
        android:padding="@dimen/padding_textView_default"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_BillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:background="#8AC9DD"
        android:hint="@string/textView_billAmountHint"
        android:labelFor="@+id/editText_BillAmount"
        android:padding="@dimen/padding_textView_default"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_row="1"
        android:layout_column="1"
        android:max="30"
        android:progress="15"
        android:tickMark="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView_percent"
        android:layout_width="47dp"
        android:layout_height="40dp"
        android:layout_row="1"
        android:layout_column="0"
        android:gravity="center"
        android:text="@string/tip_percentage"
        android:textSize="16sp" />

    <TextView
        android:layout_width="47dp"
        android:layout_height="40dp"
        android:layout_row="2"
        android:layout_column="0"
        android:gravity="center"
        android:text="@string/tip_view"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView_tip"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_row="2"
        android:layout_column="1"
        android:gravity="center"
        android:text="@string/starting_amount"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:layout_width="47dp"
        android:layout_height="40dp"
        android:layout_row="3"
        android:layout_column="0"
        android:gravity="center"
        android:text="@string/total_view"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView_total"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_row="3"
        android:layout_column="1"
        android:gravity="center"
        android:text="@string/starting_amount"
        android:textAlignment="center"
        android:textSize="16sp" />

    <!-- more goes here -->


</GridLayout>
